quick 추가 및 수량입력과 단위입력 따로받기

--- a/src/main/resources/templates/detailIngredient.html
+++ b/src/main/resources/templates/detailIngredient.html
@@ -123,7 +123,7 @@
         </tr>
         <tr>
             <th>수량</th>
-            <td th:text="${ingredient.quantity} ?: '-'"></td>
+            <td th:text="${ingredient.quantity != null ? ingredient.quantity + (ingredient.unit != null ? ingredient.unit : '') : '-'}"></td>
         </tr>
         <tr>
             <th>메모</th>
