feat: 통계 기능 추가

--- a/src/main/resources/templates/categoryManagement.html
+++ b/src/main/resources/templates/categoryManagement.html
@@ -173,6 +173,7 @@
 
 <div style="margin-top: 20px;">
     <a href="/ingredient/list" class="btn btn-secondary">식재료 목록으로</a>
+    <a href="/statistics" class="btn btn-secondary">📊 통계</a>
     <a href="/" class="btn btn-secondary">메인 페이지</a>
 </div>
 
